--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,36 @@ python = "3.12.*"
 fastapi = "^0.111.1"
 
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.5.4"
+pytest = "^8.3.1"
+pytest-cov = "^5.0.0"
+taskipy = "^1.13.0"
+
+[tool.pytest.ini_options]
+path = "tests"
+addopts = "-p no:warnings"
+
+[tool.ruff]
+line-length = 79
+extend-exclude = ["migrations"]
+
+[tool.ruff.lint]
+preview = true
+select = ["I", "F", "E", "W", "PL", "PT"]
+
+[tool.ruff.format]
+preview = true
+quote-style = "single"
+
+[tool.taskipy.tasks]
+run_dev = "fastapi dev src/app.py --host 0.0.0.0 --reload"
+pre_test = "task lint"
+test = "pytest --cov=src -vv"
+post_test = "coverage html"
+lint = "ruff check . ; ruff check . --diff"
+format = "ruff check . --fix ; ruff format ."
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
